added swagger documentation to the recipe routes
